--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <img
             class="project-image"
             src="src/images/beatbit.png"
-            alt="Project One Image"
+            alt="Beat Bit"
           />
           <h3>BitBeat</h3>
           <p class="subtext">
@@ -101,6 +101,23 @@
           <hr />
           <p class="subtext">
             <a class="project-link" href="https://acv92lhffirh.usemoralis.com/"
+              >View here</a
+            >
+          </p>
+        </div>
+         <div class="project-card">
+          <img
+            class="project-image"
+            src="src/images/star-wars.png"
+            alt="Star Wars"
+          />
+          <h3>Star Wars API Build</h3>
+          <p class="subtext">
+            A web application that allows users to search for Star Wars characters and planets using NextJS and styled components. Data is fetched from the Star Wars API.
+          </p>
+          <hr />
+          <p class="subtext">
+            <a class="project-link" href="https://star-wars-api-build.vercel.app/"
               >View here</a
             >
           </p>
